--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.26.0",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "isbot": "^5.1.27",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.7.1"
   },
   "devDependencies": {
