--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@chakra-ui/charts": "^3.26.0",
     "@chakra-ui/react": "^3.26.0",
+    "@chakra-ui/react-use-size": "^2.1.0",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "isbot": "^5.1.27",
