--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@chakra-ui/react-use-size": "^2.1.0",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "@tanstack/react-query": "^5.85.9",
     "isbot": "^5.1.27",
     "lucide-react": "^0.542.0",
+    "msw": "^2.11.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -47,5 +49,10 @@
     "typescript-eslint": "^8.41.0",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
